export class CoverageService {
  public calculateCoverage(): void {
    throw new Error("Method not implemented.");
  }

  public changeEditorVisibility(visibility: boolean): void {
    throw new Error("Method not implemented.");
  }
}
