export class StatusBarCoverageItem {}
