export class ExtensionConfigurationService {
  public toggleLineStatusVisibility(): void {}

  public toggleCoveragePercentageMode(): void {}

  public toggleCoverageBaseReferenceMode(): void {}
}
