import { FileCoverage } from "../models/file-coverage";

export class FileCoverageService {
  public getCoverageData(): FileCoverage {
    throw new Error("Method not implemented.");
  }

  public fileChanged(): void {}
}
