export class FileCoverage {
  public static createNewCoverageFile(): FileCoverage {
    throw new Error("Method not implemented.");
  }
}
