export class ProjectConfiguration {
  public static createNewConfiguration(): ProjectConfiguration {
    throw new Error("Method not implemented.");
  }
}
