import { Line } from "../models/line";

export class UncoveredLinesService {
  public selectUncoveredLine(line: Line): void {}

  public setCurrentUncoveredLines(): void {}
}
