export enum LineCoverageStatus {
  covered,
  partiallyCovered,
  uncovered,
}
