export class UncoveredLinesData {
  public static updateUncoveredLinesData(): UncoveredLinesData {
    throw new Error("Method not implemented.");
  }
}
