export class GitService {
  public getCurrentBranchDiff(): void {}
}
